--- a/Session_2/Fst_short_chuncks/simulating_windowise_Fst_KL .ipynb
+++ b/Session_2/Fst_short_chuncks/simulating_windowise_Fst_KL .ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are interested in understanding the divergence between two species and have been analysing Fst in windows of 32kb for a sample of 5 diploid individuals per species and have observed some tantalizing outliers:"
+    "We are interested in understanding the divergence between two species and have been analysing $F_{st}$ in windows of 32kb for a sample of 5 diploid individuals per species and have observed some tantalizing outliers:"
    ]
   },
   {
@@ -198,7 +198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The expected $F_{st}$ under the this model can be found using the coalescence definition above and $E[T_w]=1$ and $E[T_b]=T+1$ and matches the mean across simulations  ery well:"
+    "The expected $F_{st}$ under the this model can be found using the coalescence definition above and $E[T_w]=1$ and $E[T_b]=T+1$. Check how well this matches the mean across simulations..."
    ]
   },
   {
@@ -242,15 +242,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fstSims"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 125,
    "metadata": {},
    "outputs": [
@@ -282,34 +273,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 170,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'tuple' object has no attribute 'span'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-170-a38926c7de88>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mspan\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'span'"
-     ]
-    }
-   ],
-   "source": [
-    "print(ts.span)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We are interested in understanding the divergence between two species and have been analysing Fst in windows of 32kb for a sample of 2 diploid individuals per species and have observed some tantalizing outliers."
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -326,7 +289,7 @@
     "- a constant rate of unidirectional gene flow $m$ (per generation from pop1 to pop0) \n",
     "- two effective population sizes (we assume that the common ancestral pop has the same effective size as pop0). \n",
     "\n",
-    "Assuming the same window size (32kb) and $r$ (1.84675e-8) as before, use msprime to obtain an upper critical value of $F_{st}$. \n",
+    "We will assume Heliconius parameters for the demography, i.e. N_e on the order of $10^6$ and diovergen. Assuming the same window size (32kb) and $r$ (1.84675e-8) as before, use msprime to obtain an upper critical value of $F_{st}$. \n",
     "\n",
     "How many windows in the Hmel Hcyd data show a significant $F_{st}$ given this demographic history? \n",
     "\n",
