using new tskit release

--- a/Session_2/Fst_short_chuncks/session2_solutions.ipynb
+++ b/Session_2/Fst_short_chuncks/session2_solutions.ipynb
@@ -369,6 +369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#old Fst_function\n",
     "def Fst(div_entry):\n",
     "    A = np.mean((div_entry.diagonal()))\n",
     "    B = div_entry[1,0]\n",
@@ -380,6 +381,19 @@
     "    div_matrix = BranchStat.divergence_matrix(samplesets,winlen)\n",
     "    Fst_result = list(map(function, div_matrix))\n",
     "    return Fst_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#new Fst_function\n",
+    "def Fst(ts):\n",
+    "    A = np.mean(ts.diversity([ts.get_samples(0), ts.get_samples(1)],mode='branch'))\n",
+    "    B = ts.divergence([ts.get_samples(0), ts.get_samples(1)],mode='branch')\n",
+    "    return (B-A)/(A+B)"
    ]
   },
   {
