Added section about population sizes.

--- a/Session_1/2.Introduction_to_msprime.ipynb
+++ b/Session_1/2.Introduction_to_msprime.ipynb
@@ -27,20 +27,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook introduces, `msprime`, an reimplementation of Hudson's `ms` program for simulating genomic datasets under the coalescent model with recombination. Because it simulates datasets with the tree sequence structure, `msprime` is much more computationally efficient than many other simulation softwares. We will see that it can easily simulate chromosome-sized regions for hundreds of thousands of samples.\n",
+    "This notebook introduces `msprime` [[1](https://msprime.readthedocs.io/en/stable/introduction.html)], an reimplementation of Hudson's `ms` program [[2](http://home.uchicago.edu/~rhudson1/source/mksamples.html)] for simulating genomic datasets under the coalescent model with recombination. Because it simulates datasets with the tree sequence structure, `msprime` is much more computationally efficient than many other simulation softwares. We will see that it can easily simulate chromosome-sized regions for hundreds of thousands of samples.\n",
     " \n",
     "In later workshops, we will show how simulations with `msprime` can be used to explore the influence of various historical scenarios on observed patterns of genetic variation and inheritance.\n",
     " \n",
-    " ### The coalescent model with recombination\n",
+    "### The coalescent model with recombination\n",
     " \n",
     " Blurby summary of what the coalescent model is.\n",
-    " Maybe put some references here? Or, could make a picture?\n",
+    " Maybe put some freely available references here (Graham Coop's book, for example?)? Or, could make a picture?\n",
     " \n",
     " some important assumptions:\n",
     " - infinite sites\n",
     " - infinite times\n",
     " - small sample size relative to population\n",
-    " - No selection"
+    " - No selection\n",
+    " \n",
+    "### Other references\n",
+    "\n",
+    "[1] Kelleher, J., Etheridge, A. M., & McVean, G. (2016). Efficient Coalescent Simulation and Genealogical Analysis for Large Sample Sizes. PLOS Computational Biology, 12(5), e1004842. https://doi.org/10.1371/journal.pcbi.1004842\n",
+    "\n",
+    "[2] Hudson, R. R. (2002) Generating samples under a Wright-Fisher neutral model. Bioinformatics 18:337-8."
    ]
   },
   {
@@ -66,16 +72,31 @@
    "source": [
     "### A simple simulation\n",
     "\n",
-    " - Minimal input into msprime is a sample size\n",
-    " - Let's simulate 6 chromosomes to start off with.\n",
-    " - We'll use this to illustrate some basic features of msprime simulations."
+    " The minimal input into msprime is a sample size. Let's simulate a small sample of 6 chromosomes to start off with. We'll use this to illustrate some basic features of msprime simulations."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts = msprime.simulate(sample_size = 6, random_seed = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of trees in tree sequence: 1\n",
+      "Length of simulated sequence: 1.0\n"
+     ]
+    },
     {
      "data": {
       "image/svg+xml": [
@@ -90,23 +111,89 @@
     }
    ],
    "source": [
-    "ts = msprime.simulate(sample_size = 6, random_seed =1)\n",
-    "\n",
-    "for tree in ts.trees():\n",
-    "    display(SVG(tree.draw(width=300)))"
+    "print(\"Number of trees in tree sequence:\", ts.num_trees)\n",
+    "print(\"Length of simulated sequence:\", ts.sequence_length)\n",
+    "display(SVG(ts.first().draw(width=300)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Only a single tree. This is default behaviour because no recombination as yet. Because we have not specified a sequence length, will be 1 by default. (Can think of this as the local tree at a single nucleotide base).\n",
+    "Notice that there is only a single tree in our simulated tree sequence. This is because we have not specified any recombination. \n",
+    "Because we also haven't specified a sequence length, our simulated sequence will have length 1. \n",
+    "The units of genomic length in msprime are arbitrary, but it is often convenient to specify the length to be the number of nucleotide bases in the sequence."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id\tflags\tpopulation\tindividual\ttime\tmetadata\n",
+      "0\t1\t0\t-1\t0.00000000000000\t\n",
+      "1\t1\t0\t-1\t0.00000000000000\t\n",
+      "2\t1\t0\t-1\t0.00000000000000\t\n",
+      "3\t1\t0\t-1\t0.00000000000000\t\n",
+      "4\t1\t0\t-1\t0.00000000000000\t\n",
+      "5\t1\t0\t-1\t0.00000000000000\t\n",
+      "6\t0\t0\t-1\t0.07194744353492\t\n",
+      "7\t0\t0\t-1\t0.61124301112428\t\n",
+      "8\t0\t0\t-1\t0.73124726040958\t\n",
+      "9\t0\t0\t-1\t0.91078323219376\t\n",
+      "10\t0\t0\t-1\t1.32301250012150\t\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ts.tables.nodes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The six simulated sample nodes are the ones labelled 0 - 5. Their 'sample' status is indicated by the flags column.\n",
     "\n",
-    "Looking at the generated ancestral nodes, notice that they have non-integer times. This is an assumption of the coalescent model:\n",
-    "Note that under msprime, time is measured in units of generations. \n",
+    "### Times in msprime\n",
     "\n",
-    "In trees generated by msprime, the times are recorded in units of generations.\n",
-    "One coalescence of lineages at each location. (Infinite times?)"
+    "In msprime, times are given in units of *generations backwards-in-time* (not in coalescent units of 2Ne, as in some other coalescent simulation softwares).\n",
+    "\n",
+    "The reason why the node times in our simple example are so small is because, by default, msprime assumes a constant effective population size N of 1.\n",
+    "Recall that under the coalescent model, each simulated ancestral node represents a *coalescence event* at which two lineages converge. Under standard coalescent theory, these coalescences should occur less frequently in a larger population. We can see this by specifying a bigger population size in our simulation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id\tflags\tpopulation\tindividual\ttime\tmetadata\n",
+      "0\t1\t0\t-1\t0.00000000000000\t\n",
+      "1\t1\t0\t-1\t0.00000000000000\t\n",
+      "2\t1\t0\t-1\t0.00000000000000\t\n",
+      "3\t1\t0\t-1\t0.00000000000000\t\n",
+      "4\t1\t0\t-1\t0.00000000000000\t\n",
+      "5\t1\t0\t-1\t0.00000000000000\t\n",
+      "6\t0\t0\t-1\t719.47443534915067\t\n",
+      "7\t0\t0\t-1\t6112.43011124283566\t\n",
+      "8\t0\t0\t-1\t7312.47260409581213\t\n",
+      "9\t0\t0\t-1\t9107.83232193760159\t\n",
+      "10\t0\t0\t-1\t13230.12500121500307\t\n"
+     ]
+    }
+   ],
+   "source": [
+    "ts = msprime.simulate(sample_size = 6, random_seed = 1, Ne = 10000)\n",
+    "print(ts.tables.nodes)"
    ]
   },
   {
@@ -115,16 +202,13 @@
    "source": [
     "### Random seeds\n",
     "\n",
-    "Coalescent events (as well as mutation events, recombination events, etc) are realisations of a random process.\n",
-    "So, when you run msprime many different times, you'll see different trees.\n",
-    "\n",
-    "In many situations (for example - in tutorials!), it may be useful to be able to replicate the same output each time.\n",
+    "In general, running the same `msprime` commands multiple times will produce different outputs.\n",
     "To ensure the same output, you can specify a random seed. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +564,7 @@
        "       [0, 0, 1, 0, 0, 0]], dtype=uint8)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
