Added to recombination section.

--- a/Session_1/2.Introduction_to_msprime.ipynb
+++ b/Session_1/2.Introduction_to_msprime.ipynb
@@ -164,12 +164,12 @@
     "In msprime, times are given in units of *generations backwards-in-time* (not in coalescent units of 2Ne, as in some other coalescent simulation softwares).\n",
     "\n",
     "The reason why the node times in our simple example are so small is because, by default, msprime assumes a constant effective population size N of 1.\n",
-    "Recall that under the coalescent model, each simulated ancestral node represents a *coalescence event* at which two lineages converge. Under standard coalescent theory, these coalescences should occur less frequently in a larger population. We can see this by specifying a bigger population size in our simulation:"
+    "Recall that under the coalescent model, each simulated ancestral node represents a *coalescence event* at which two lineages converge. These coalescences should occur less frequently in a larger population. We can see this by specifying a bigger population size in our simulation:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -237,14 +237,17 @@
    "source": [
     "## 2.3 Recombination\n",
     "\n",
+    "With `msprime`, we can simulate not just a single genomic locus, but entire chromosomal-sized sequences. \n",
+    "To do this, we will often want to add in a model of recombination.\n",
+    "\n",
     "### Uniform recombination\n",
     "\n",
-    "To specify recombination, need two extra bits of information: a sequence length (usually specified as a number of bases) and a recombination rate (specified as the rate of crossing over per unit of length per generation)."
+    "To simulate with a constant recombination rate, we must specify two extra inputs to `msprime.simulate`: a sequence length (most easily specified as a number of bases) and a recombination rate (specified as the rate of crossing over per unit of length per generation)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -287,8 +290,7 @@
     }
    ],
    "source": [
-    "ts = msprime.simulate(sample_size = 6, random_seed = 12,\n",
-    "                     length = 1000, recombination_rate = 1e-4 )\n",
+    "ts = msprime.simulate(sample_size = 6, random_seed = 12, length = 1000, recombination_rate = 1e-4 )\n",
     "\n",
     "for tree in ts.trees():\n",
     "    print('Tree on interval', tree.interval)\n",
@@ -299,7 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A consequence of the infinite sites assumption is that crossover positions will be floating point numbers. "
+    "A consequence of the infinite sites assumption is that crossovers will occur at non-integer locations. "
    ]
   },
   {
@@ -308,99 +310,41 @@
    "source": [
     "### Non-uniform recombination\n",
     "\n",
-    "Also possible to use an external recombination map. \n",
-    "To do this, replace the two existing parameters with a recombination_map. (The sequence length will be learnt from the positions in the map.\n",
-    "\n",
-    "The recombination rate must be given as a RecombinationMap object.\n",
-    "(Features: length of positions and lengths are the same, rate is the per-base rate of recombination)"
+    "It's also possible to simulate under a variable rate of recombination.\n",
+    "To do this, specify an external recombination map given as a `msprime.RecombinationMap` object.\n",
+    "See the [msprime documentation](https://msprime.readthedocs.io/en/stable/api.html?highlight=RecombinationMap#msprime.RecombinationMap) for more information about these objects."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tree on interval (0.0, 249.06398236496932)\n"
-     ]
-    },
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg baseProfile=\"full\" height=\"200\" version=\"1.1\" width=\"300\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:ev=\"http://www.w3.org/2001/xml-events\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"><defs/><g id=\"lines\" stroke=\"black\"><line x1=\"56.25\" x2=\"56.25\" y1=\"163.74093175875026\" y2=\"20.0\"/><line x1=\"56.25\" x2=\"112.5\" y1=\"20.0\" y2=\"20.0\"/><line x1=\"37.5\" x2=\"37.5\" y1=\"180.0\" y2=\"163.74093175875026\"/><line x1=\"37.5\" x2=\"56.25\" y1=\"163.74093175875026\" y2=\"163.74093175875026\"/><line x1=\"75.0\" x2=\"75.0\" y1=\"180.0\" y2=\"163.74093175875026\"/><line x1=\"75.0\" x2=\"56.25\" y1=\"163.74093175875026\" y2=\"163.74093175875026\"/><line x1=\"168.75\" x2=\"168.75\" y1=\"62.00525645765207\" y2=\"20.0\"/><line x1=\"168.75\" x2=\"112.5\" y1=\"20.0\" y2=\"20.0\"/><line x1=\"131.25\" x2=\"131.25\" y1=\"175.19173143800097\" y2=\"62.00525645765207\"/><line x1=\"131.25\" x2=\"168.75\" y1=\"62.00525645765207\" y2=\"62.00525645765207\"/><line x1=\"112.5\" x2=\"112.5\" y1=\"180.0\" y2=\"175.19173143800097\"/><line x1=\"112.5\" x2=\"131.25\" y1=\"175.19173143800097\" y2=\"175.19173143800097\"/><line x1=\"150.0\" x2=\"150.0\" y1=\"180.0\" y2=\"175.19173143800097\"/><line x1=\"150.0\" x2=\"131.25\" y1=\"175.19173143800097\" y2=\"175.19173143800097\"/><line x1=\"206.25\" x2=\"206.25\" y1=\"174.08849808360358\" y2=\"62.00525645765207\"/><line x1=\"206.25\" x2=\"168.75\" y1=\"62.00525645765207\" y2=\"62.00525645765207\"/><line x1=\"187.5\" x2=\"187.5\" y1=\"180.0\" y2=\"174.08849808360358\"/><line x1=\"187.5\" x2=\"206.25\" y1=\"174.08849808360358\" y2=\"174.08849808360358\"/><line x1=\"225.0\" x2=\"225.0\" y1=\"180.0\" y2=\"174.08849808360358\"/><line x1=\"225.0\" x2=\"206.25\" y1=\"174.08849808360358\" y2=\"174.08849808360358\"/></g><g fill=\"black\" id=\"nodes\"><circle cx=\"112.5\" cy=\"20.0\" r=\"3\"/><circle cx=\"56.25\" cy=\"163.74093175875026\" r=\"3\"/><circle cx=\"37.5\" cy=\"180.0\" r=\"3\"/><circle cx=\"75.0\" cy=\"180.0\" r=\"3\"/><circle cx=\"168.75\" cy=\"62.00525645765207\" r=\"3\"/><circle cx=\"131.25\" cy=\"175.19173143800097\" r=\"3\"/><circle cx=\"112.5\" cy=\"180.0\" r=\"3\"/><circle cx=\"150.0\" cy=\"180.0\" r=\"3\"/><circle cx=\"206.25\" cy=\"174.08849808360358\" r=\"3\"/><circle cx=\"187.5\" cy=\"180.0\" r=\"3\"/><circle cx=\"225.0\" cy=\"180.0\" r=\"3\"/></g><g fill=\"red\" id=\"mutations\"/><g font-size=\"14\" text-anchor=\"start\"><text x=\"173.75\" y=\"57.00525645765207\">9</text><text x=\"211.25\" y=\"169.08849808360358\">7</text></g><g font-size=\"14\" text-anchor=\"end\"><text x=\"51.25\" y=\"158.74093175875026\">8</text><text x=\"126.25\" y=\"170.19173143800097\">6</text></g><g font-size=\"14\" text-anchor=\"middle\"><text x=\"112.5\" y=\"15.0\">11</text><text x=\"37.5\" y=\"200.0\">2</text><text x=\"75.0\" y=\"200.0\">5</text><text x=\"112.5\" y=\"200.0\">0</text><text x=\"150.0\" y=\"200.0\">1</text><text x=\"187.5\" y=\"200.0\">3</text><text x=\"225.0\" y=\"200.0\">4</text></g><g alignment-baseline=\"middle\" font-size=\"14\" font-style=\"italic\" text-anchor=\"start\"/><g alignment-baseline=\"middle\" font-size=\"14\" font-style=\"italic\" text-anchor=\"end\"/></svg>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.SVG object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tree on interval (249.06398236496932, 849.2285334503345)\n"
-     ]
-    },
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg baseProfile=\"full\" height=\"200\" version=\"1.1\" width=\"300\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:ev=\"http://www.w3.org/2001/xml-events\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"><defs/><g id=\"lines\" stroke=\"black\"><line x1=\"37.5\" x2=\"37.5\" y1=\"180.0\" y2=\"20.0\"/><line x1=\"37.5\" x2=\"107.8125\" y1=\"20.0\" y2=\"20.0\"/><line x1=\"178.125\" x2=\"178.125\" y1=\"38.86149889057404\" y2=\"20.0\"/><line x1=\"178.125\" x2=\"107.8125\" y1=\"20.0\" y2=\"20.0\"/><line x1=\"131.25\" x2=\"131.25\" y1=\"75.91499223526183\" y2=\"38.86149889057404\"/><line x1=\"131.25\" x2=\"178.125\" y1=\"38.86149889057404\" y2=\"38.86149889057404\"/><line x1=\"93.75\" x2=\"93.75\" y1=\"175.75855113892425\" y2=\"75.91499223526183\"/><line x1=\"93.75\" x2=\"131.25\" y1=\"75.91499223526183\" y2=\"75.91499223526183\"/><line x1=\"75.0\" x2=\"75.0\" y1=\"180.0\" y2=\"175.75855113892425\"/><line x1=\"75.0\" x2=\"93.75\" y1=\"175.75855113892425\" y2=\"175.75855113892425\"/><line x1=\"112.5\" x2=\"112.5\" y1=\"180.0\" y2=\"175.75855113892425\"/><line x1=\"112.5\" x2=\"93.75\" y1=\"175.75855113892425\" y2=\"175.75855113892425\"/><line x1=\"168.75\" x2=\"168.75\" y1=\"174.78537175133945\" y2=\"75.91499223526183\"/><line x1=\"168.75\" x2=\"131.25\" y1=\"75.91499223526183\" y2=\"75.91499223526183\"/><line x1=\"150.0\" x2=\"150.0\" y1=\"180.0\" y2=\"174.78537175133945\"/><line x1=\"150.0\" x2=\"168.75\" y1=\"174.78537175133945\" y2=\"174.78537175133945\"/><line x1=\"187.5\" x2=\"187.5\" y1=\"180.0\" y2=\"174.78537175133945\"/><line x1=\"187.5\" x2=\"168.75\" y1=\"174.78537175133945\" y2=\"174.78537175133945\"/><line x1=\"225.0\" x2=\"225.0\" y1=\"180.0\" y2=\"38.86149889057404\"/><line x1=\"225.0\" x2=\"178.125\" y1=\"38.86149889057404\" y2=\"38.86149889057404\"/></g><g fill=\"black\" id=\"nodes\"><circle cx=\"107.8125\" cy=\"20.0\" r=\"3\"/><circle cx=\"37.5\" cy=\"180.0\" r=\"3\"/><circle cx=\"178.125\" cy=\"38.86149889057404\" r=\"3\"/><circle cx=\"131.25\" cy=\"75.91499223526183\" r=\"3\"/><circle cx=\"93.75\" cy=\"175.75855113892425\" r=\"3\"/><circle cx=\"75.0\" cy=\"180.0\" r=\"3\"/><circle cx=\"112.5\" cy=\"180.0\" r=\"3\"/><circle cx=\"168.75\" cy=\"174.78537175133945\" r=\"3\"/><circle cx=\"150.0\" cy=\"180.0\" r=\"3\"/><circle cx=\"187.5\" cy=\"180.0\" r=\"3\"/><circle cx=\"225.0\" cy=\"180.0\" r=\"3\"/></g><g fill=\"red\" id=\"mutations\"/><g font-size=\"14\" text-anchor=\"start\"><text x=\"183.125\" y=\"33.86149889057404\">11</text><text x=\"173.75\" y=\"169.78537175133945\">7</text></g><g font-size=\"14\" text-anchor=\"end\"><text x=\"126.25\" y=\"70.91499223526183\">9</text><text x=\"88.75\" y=\"170.75855113892425\">6</text></g><g font-size=\"14\" text-anchor=\"middle\"><text x=\"107.8125\" y=\"15.0\">12</text><text x=\"37.5\" y=\"200.0\">5</text><text x=\"75.0\" y=\"200.0\">0</text><text x=\"112.5\" y=\"200.0\">1</text><text x=\"150.0\" y=\"200.0\">3</text><text x=\"187.5\" y=\"200.0\">4</text><text x=\"225.0\" y=\"200.0\">2</text></g><g alignment-baseline=\"middle\" font-size=\"14\" font-style=\"italic\" text-anchor=\"start\"/><g alignment-baseline=\"middle\" font-size=\"14\" font-style=\"italic\" text-anchor=\"end\"/></svg>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.SVG object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tree on interval (849.2285334503345, 1000.0)\n"
-     ]
-    },
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg baseProfile=\"full\" height=\"200\" version=\"1.1\" width=\"300\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:ev=\"http://www.w3.org/2001/xml-events\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"><defs/><g id=\"lines\" stroke=\"black\"><line x1=\"37.5\" x2=\"37.5\" y1=\"180.0\" y2=\"20.0\"/><line x1=\"37.5\" x2=\"86.71875\" y1=\"20.0\" y2=\"20.0\"/><line x1=\"135.9375\" x2=\"135.9375\" y1=\"38.86149889057404\" y2=\"20.0\"/><line x1=\"135.9375\" x2=\"86.71875\" y1=\"20.0\" y2=\"20.0\"/><line x1=\"93.75\" x2=\"93.75\" y1=\"175.75855113892425\" y2=\"38.86149889057404\"/><line x1=\"93.75\" x2=\"135.9375\" y1=\"38.86149889057404\" y2=\"38.86149889057404\"/><line x1=\"75.0\" x2=\"75.0\" y1=\"180.0\" y2=\"175.75855113892425\"/><line x1=\"75.0\" x2=\"93.75\" y1=\"175.75855113892425\" y2=\"175.75855113892425\"/><line x1=\"112.5\" x2=\"112.5\" y1=\"180.0\" y2=\"175.75855113892425\"/><line x1=\"112.5\" x2=\"93.75\" y1=\"175.75855113892425\" y2=\"175.75855113892425\"/><line x1=\"178.125\" x2=\"178.125\" y1=\"62.7001525405028\" y2=\"38.86149889057404\"/><line x1=\"178.125\" x2=\"135.9375\" y1=\"38.86149889057404\" y2=\"38.86149889057404\"/><line x1=\"150.0\" x2=\"150.0\" y1=\"180.0\" y2=\"62.7001525405028\"/><line x1=\"150.0\" x2=\"178.125\" y1=\"62.7001525405028\" y2=\"62.7001525405028\"/><line x1=\"206.25\" x2=\"206.25\" y1=\"174.78537175133945\" y2=\"62.7001525405028\"/><line x1=\"206.25\" x2=\"178.125\" y1=\"62.7001525405028\" y2=\"62.7001525405028\"/><line x1=\"187.5\" x2=\"187.5\" y1=\"180.0\" y2=\"174.78537175133945\"/><line x1=\"187.5\" x2=\"206.25\" y1=\"174.78537175133945\" y2=\"174.78537175133945\"/><line x1=\"225.0\" x2=\"225.0\" y1=\"180.0\" y2=\"174.78537175133945\"/><line x1=\"225.0\" x2=\"206.25\" y1=\"174.78537175133945\" y2=\"174.78537175133945\"/></g><g fill=\"black\" id=\"nodes\"><circle cx=\"86.71875\" cy=\"20.0\" r=\"3\"/><circle cx=\"37.5\" cy=\"180.0\" r=\"3\"/><circle cx=\"135.9375\" cy=\"38.86149889057404\" r=\"3\"/><circle cx=\"93.75\" cy=\"175.75855113892425\" r=\"3\"/><circle cx=\"75.0\" cy=\"180.0\" r=\"3\"/><circle cx=\"112.5\" cy=\"180.0\" r=\"3\"/><circle cx=\"178.125\" cy=\"62.7001525405028\" r=\"3\"/><circle cx=\"150.0\" cy=\"180.0\" r=\"3\"/><circle cx=\"206.25\" cy=\"174.78537175133945\" r=\"3\"/><circle cx=\"187.5\" cy=\"180.0\" r=\"3\"/><circle cx=\"225.0\" cy=\"180.0\" r=\"3\"/></g><g fill=\"red\" id=\"mutations\"/><g font-size=\"14\" text-anchor=\"start\"><text x=\"140.9375\" y=\"33.86149889057404\">11</text><text x=\"183.125\" y=\"57.7001525405028\">10</text><text x=\"211.25\" y=\"169.78537175133945\">7</text></g><g font-size=\"14\" text-anchor=\"end\"><text x=\"88.75\" y=\"170.75855113892425\">6</text></g><g font-size=\"14\" text-anchor=\"middle\"><text x=\"86.71875\" y=\"15.0\">12</text><text x=\"37.5\" y=\"200.0\">5</text><text x=\"75.0\" y=\"200.0\">0</text><text x=\"112.5\" y=\"200.0\">1</text><text x=\"150.0\" y=\"200.0\">2</text><text x=\"187.5\" y=\"200.0\">3</text><text x=\"225.0\" y=\"200.0\">4</text></g><g alignment-baseline=\"middle\" font-size=\"14\" font-style=\"italic\" text-anchor=\"start\"/><g alignment-baseline=\"middle\" font-size=\"14\" font-style=\"italic\" text-anchor=\"end\"/></svg>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.SVG object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Making a RecombinationMap object.\n",
     "map_positions = [i*100 for i in range(0, 11)]\n",
     "map_rates = [0, 1e-4, 5e-4, 1e-4, 0, 0, 0, 5e-4, 6e-4, 1e-4, 0]\n",
     "my_map = msprime.RecombinationMap(map_positions, map_rates)\n",
     "\n",
+    "# Simulating with the recombination map.\n",
     "ts = msprime.simulate(sample_size = 6, random_seed = 12, recombination_map = my_map)\n",
-    "for tree in ts.trees():\n",
-    "    print('Tree on interval', tree.interval)\n",
-    "    display(SVG(tree.draw(width=300)))"
+    "# for tree in ts.trees():\n",
+    "#     print('Tree on interval', tree.interval)\n",
+    "#     display(SVG(tree.draw(width=300)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Integer breakpoints\n",
+    "### Integer crossover breakpoints\n",
     "\n",
     "Get help from Jerome on this."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +508,7 @@
        "       [0, 0, 1, 0, 0, 0]], dtype=uint8)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
