Added to mutation section.

--- a/Session_1/2.Introduction_to_msprime.ipynb
+++ b/Session_1/2.Introduction_to_msprime.ipynb
@@ -12,8 +12,9 @@
     "4. Mutation\n",
     "5. Population structure\n",
     "6. Demographic events\n",
-    "7. Large simulations\n",
-    "8. Exporting to other data formats"
+    "7. Generating a full ARG\n",
+    "8. Large simulations\n",
+    "9. Exporting to other data formats"
    ]
   },
   {
@@ -163,7 +164,7 @@
     "\n",
     "In msprime, times are given in units of *generations backwards-in-time* (not in coalescent units of 2Ne, as in some other coalescent simulation softwares).\n",
     "\n",
-    "The reason why the node times in our simple example are so small is because, by default, msprime assumes a constant effective population size N of 1.\n",
+    "The reason why the node times in our simple example are so small is because, by default, msprime assumes a constant effective population size of 1.\n",
     "Recall that under the coalescent model, each simulated ancestral node represents a *coalescence event* at which two lineages converge. These coalescences should occur less frequently in a larger population. We can see this by specifying a bigger population size in our simulation:"
    ]
   },
@@ -327,10 +328,7 @@
     "my_map = msprime.RecombinationMap(map_positions, map_rates)\n",
     "\n",
     "# Simulating with the recombination map.\n",
-    "ts = msprime.simulate(sample_size = 6, random_seed = 12, recombination_map = my_map)\n",
-    "# for tree in ts.trees():\n",
-    "#     print('Tree on interval', tree.interval)\n",
-    "#     display(SVG(tree.draw(width=300)))"
+    "ts = msprime.simulate(sample_size = 6, random_seed = 12, recombination_map = my_map)"
    ]
   },
   {
@@ -363,7 +361,7 @@
    "source": [
     "## 2.4 Mutation\n",
     "\n",
-    "Per base mutation rate."
+    "To simulate genetic variation, we'll need to add some mutations to our tree sequences. Mutations are generated in msprime by throwing mutations down on the branches of trees at a rate specified by the `mutation_rate` input to `simulate`. "
    ]
   },
   {
@@ -421,71 +419,67 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "id\tsite\tnode\tderived_state\tparent\tmetadata\n",
-      "0\t0\t7\t1\t-1\t\n",
-      "1\t1\t8\t1\t-1\t\n",
-      "2\t2\t6\t1\t-1\t\n",
-      "3\t3\t10\t1\t-1\t\n",
-      "4\t4\t4\t1\t-1\t\n",
-      "5\t5\t6\t1\t-1\t\n",
-      "6\t6\t2\t1\t-1\t\n",
-      "7\t7\t6\t1\t-1\t\n",
-      "8\t8\t5\t1\t-1\t\n",
-      "9\t9\t2\t1\t-1\t\n"
-     ]
-    }
-   ],
    "source": [
-    "print(ts.tables.mutations)"
+    "The mutations are generated under the infinite sites model, and so each mutation occurs at a unique (floating point) point position along the simulated sequence. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Can be iterated through 1 at a time:"
+    "### Accessing the simulated variants\n",
+    "\n",
+    "We may want to directly analyse the sequence data that results from simulations.\n",
+    "The most efficient way to do this is with the `variants()` method, which returns an iterator over all the mutated sites. Each variant contains a reference to the site object, as well as the alleles and the observed sequences for each sample in the genotypes field:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 0 0 1 1 0]\n",
-      "[0 0 1 0 0 1]\n",
-      "[1 1 0 0 0 0]\n",
-      "[1 1 0 1 1 1]\n",
-      "[0 0 0 0 1 0]\n",
-      "[1 1 0 0 0 0]\n",
-      "[0 0 1 0 0 0]\n",
-      "[1 1 0 0 0 0]\n",
-      "[0 0 0 0 0 1]\n",
-      "[0 0 1 0 0 0]\n"
+      "Site ID\t Site position\t\t Alleles\t Genotypes\t\n",
+      "0\t127.69973140085281\t('0', '1')\t[0 0 0 1 1 0]\n",
+      "1\t139.48664451133118\t('0', '1')\t[0 0 1 0 0 1]\n",
+      "2\t289.5867882762104\t('0', '1')\t[1 1 0 0 0 0]\n",
+      "3\t406.6403051838279\t('0', '1')\t[1 1 0 1 1 1]\n",
+      "4\t456.05092123150826\t('0', '1')\t[0 0 0 0 1 0]\n",
+      "5\t471.22978256084025\t('0', '1')\t[1 1 0 0 0 0]\n",
+      "6\t692.8133055495289\t('0', '1')\t[0 0 1 0 0 0]\n",
+      "7\t816.1682989448309\t('0', '1')\t[1 1 0 0 0 0]\n",
+      "8\t953.5049363062362\t('0', '1')\t[0 0 0 0 0 1]\n",
+      "9\t982.0459640208176\t('0', '1')\t[0 0 1 0 0 0]\n"
      ]
     }
    ],
    "source": [
+    "print('Site ID\\t', 'Site position\\t\\t', 'Alleles\\t', 'Genotypes\\t')\n",
     "for var in ts.variants():\n",
-    "    print(var.genotypes)"
+    "    print(var.site.id, var.site.position, var.alleles, var.genotypes, sep=\"\\t\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Or all at once (though, this can be very big)"
+    "Note that `var.alleles[var.genotypes[j]]` gives the allele of sample ID j at variant `var`.\n",
+    "By default, `msprime` labels the wildtype allele `'0'` and the mutated type allele `'1'`.\n",
+    "(Recall that under the infinite sites assumption, there is at most one mutation at any genomic location).\n",
+    "\n",
+    "(Can these be changed to explicitly show nucleotide bases somehow?)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we want a numpy array containing all sample genotypes at all variant sites, we can get it using the `genotype_matrix()` method:"
    ]
   },
   {
@@ -515,6 +509,13 @@
    ],
    "source": [
     "ts.genotype_matrix()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Be aware that this matrix might be very big (bigger than the tree sequence it's extracted from, in most realistic simulations!)"
    ]
   },
   {
@@ -565,7 +566,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.7 Large simulations"
+    "## 2.7 Simulating a full ARG"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.8 Large simulations"
    ]
   },
   {
@@ -579,7 +587,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.8 Exporting data into other formats"
+    "## 2.9 Exporting data into other formats"
    ]
   },
   {
